added icons to box-units; footer restyled; social media/contact me icons added to footer; brand icon added to navbar

--- a/app/index.html
+++ b/app/index.html
@@ -30,24 +30,39 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <nav class="navbar-container">
-      ME
+      <!-- <div class="navbar-brand"> -->
+        <a href="#home">
+          <svg class="brand" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40" height="40" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
+            <g>
+              <rect x="-1" y="1" fill="none" width="100" height="100"/>
+            </g>
+            <g>
+              <rect class="logo" x="105" y="107"  width="203" height="812"/>
+              <rect class="logo" x="714" y="106"  width="203" height="812"/>
+            </g>
+            <g>
+              <rect  class="logo" x="388" y="107"  width="246" height="527"/>
+            </g>
+          </svg>
+        </a>
+      <!-- </div> -->
     </nav>
     <main class="main-section">
       <div class="box">
         <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
           <div class="flipper">
             <div class="front">
-              me
+              <img src="images/ic_face_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
-              surprise
+              Passionate web developer, curious philosopher.
             </div>
           </div>
         </div>
         <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
           <div class="flipper">
             <div class="front">
-              code
+              <img src="images/ic_code_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
               surprisessss
@@ -57,7 +72,7 @@
         <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
           <div class="flipper">
             <div class="front">
-              study
+              <img src="images/ic_school_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
               surprisessss
@@ -68,7 +83,7 @@
           <div class="flipper">
             <div class="front">
               <span>
-                work
+                <img src="images/ic_work_black_24dp_2x.png" alt="">
               </span>
             </div>
             <div class="back">
@@ -81,11 +96,12 @@
         before the main section finishes i want to write something like a quote
       </p>
     </main>
+
     <footer class="footer-container">
       <div class="social-item">
         <a href="https://github.com/Mexassi" target="_blank">
           <svg version="1.1" id="social-github" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="70px" height="70px" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
+          width="50px" height="50px" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
           <g>
             <circle class="social-icon" cx="509.064" cy="515.5" r="502.629"/>
             <g>
@@ -127,7 +143,7 @@
     <div class="social-item">
       <a href="https://au.linkedin.com/pub/massimo-presta/18/157/125" target="_blank">
           <svg version="1.1" id="social-linkedin" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="70px" height="70px" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
+          width="50px" height="50px" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
           <g>
             <circle class="social-icon" cx="512.096" cy="509.097" r="497.779"/>
             <g>
@@ -143,7 +159,7 @@
     <div class="social-item">
       <a id="mail-me" href="mailto:mexassi@hotmail.it?Subject=I%20have%20seen%20your%20website!" target="_top">
         <svg version="1.1" id="social-mail" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        width="70px" height="70px" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
+        width="50px" height="50px" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
           <g>
             <circle class="social-icon" cx="511.466" cy="511.966" r="488.844"/>
             <path class="social-icon-inner" d="M806.265,293H223.237c-9.743,0-18.237,7.837-18.237,17.581V675.13c0,9.74,8.494,18.87,18.237,18.87h583.028
