--- a/app/index.html
+++ b/app/index.html
@@ -170,7 +170,7 @@
         </svg>
       </a>
     </div>
-    <div class="">
+    <div class="copyright">
       &copy 2017 Massimo Presta
     </div>
     </footer>
