back of card flipping done with quote and button

--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <!-- bower:css -->
     <!-- endbower -->
     <!-- endbuild -->
-
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
     <!-- build:css styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/nav.css">
@@ -55,7 +55,12 @@
               <img src="images/ic_face_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
-              Passionate web developer, curious philosopher.
+              <div class="description">
+                Passionate web developer, curious philosopher.
+              </div>
+              <div class="action">
+                <a href="#" class="action-button shadow animate green">me</a>
+              </div>
             </div>
           </div>
         </div>
@@ -65,7 +70,12 @@
               <img src="images/ic_code_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
-              surprisessss
+              <div class="description">
+                Make it work, make it right, make it fast.
+              </div>
+              <div class="action">
+                <a href="#" class="action-button shadow animate green">skills</a>
+              </div>
             </div>
           </div>
         </div>
@@ -75,7 +85,12 @@
               <img src="images/ic_school_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
-              surprisessss
+              <div class="description">
+                Learning is hard work, but everything you learn is yours.
+              </div>
+              <div class="action">
+                <a href="#" class="action-button shadow animate green">edu</a>
+              </div>
             </div>
           </div>
         </div>
@@ -87,7 +102,12 @@
               </span>
             </div>
             <div class="back">
-              surprisessss
+              <div class="description">
+                Perfect is the <br> enemy of good.
+              </div>
+              <div class="action">
+                <a href="#" class="action-button shadow animate green">work</a>
+              </div>
             </div>
           </div>
         </div>
