centering button in card back; preventing side scrolling on mobiledevices; preventing butttext selection on mobile devices

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
     <title>resume</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -31,7 +31,7 @@
     <![endif]-->
     <nav class="navbar-container">
       <!-- <div class="navbar-brand"> -->
-        <a href="#home">
+        <a>
           <svg class="brand" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40" height="40" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
             <g>
               <rect x="-1" y="1" fill="none" width="100" height="100"/>
@@ -49,52 +49,53 @@
     </nav>
     <main class="main-section">
       <div class="box">
-        <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
+        <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
               <img src="images/ic_face_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
               <div class="description">
-                Passionate web developer, curious philosopher.
+                Passionate web developer, <br> curious philosopher.
               </div>
               <div class="action">
-                <a href="#" class="action-button shadow animate green">me</a>
+                <a class="action-button shadow animate green">me</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
+        <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
               <img src="images/ic_code_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
               <div class="description">
-                Make it work, make it right, make it fast.
+                Make it work, make it right, <br> make it fast.
               </div>
               <div class="action">
-                <a href="#" class="action-button shadow animate green">skills</a>
+                <a class="action-button shadow animate green">skills</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
+        <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
               <img src="images/ic_school_black_24dp_2x.png" alt="">
             </div>
             <div class="back">
               <div class="description">
-                Learning is hard work, but everything you learn is yours.
+                Learning is hard work, <br> but everything you learn is yours.
               </div>
               <div class="action">
-                <a href="#" class="action-button shadow animate green">edu</a>
+                <a class="action-button shadow animate green">edu</a>
               </div>
             </div>
           </div>
         </div>
-        <div class="flip-container box-unit" ontouchstart="this.classList.toggle('hover');">
+        <!-- ontouchstart="this.classList.toggle('hover');" -->
+        <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
               <span>
@@ -106,7 +107,7 @@
                 Perfect is the <br> enemy of good.
               </div>
               <div class="action">
-                <a href="#" class="action-button shadow animate green">work</a>
+                <a class="action-button shadow animate green">work</a>
               </div>
             </div>
           </div>
