--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/svg.css">
+    <link rel="stylesheet" href="styles/skills.css">
     <!-- endbuild -->
 
     <!-- build:js scripts/vendor/modernizr.js -->
