--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
     <![endif]-->
     <nav class="navbar-container">
       <!-- <div class="navbar-brand"> -->
-        <a>
+        <a href="https://mexassi.github.io">
           <svg class="brand" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="40" height="40" viewBox="0 0 1024 1024" enable-background="new 0 0 1024 1024" xml:space="preserve">
             <g>
               <rect x="-1" y="1" fill="none" width="100" height="100"/>
@@ -47,6 +47,12 @@
             </g>
           </svg>
         </a>
+        <div class="resume">
+          <!-- <div class="action">
+            <a class="action-button shadow animate gray" style="text-align:center">resume</a>
+          </div> -->
+          <a class="resume-btn">Resume</a>
+        </div>
       <!-- </div> -->
     </nav>
     <main class="main-section">
