changing card button style; re-styling skill view;

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
                 Passionate full-stack developer, <br> curious philosopher.
               </div>
               <div class="action">
-                <a class="action-button shadow animate green" onclick="namespace.openModal(event, 'me');">me</a>
+                <a class="action-button shadow animate gray" onclick="namespace.openModal(event, 'me');">me</a>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
                 Make it work, <br />make it right, <br> make it fast.
               </div>
               <div class="action">
-                <a class="action-button shadow animate green" onclick="namespace.openModal(event, 'skills');">skills</a>
+                <a class="action-button shadow animate gray" onclick="namespace.openModal(event, 'skills');">skills</a>
               </div>
             </div>
           </div>
@@ -97,7 +97,7 @@
                 Learning is hard work, <br> but everything you learn is yours.
               </div>
               <div class="action">
-                <a class="action-button shadow animate green" onclick="namespace.openModal(event, 'edu');">edu</a>
+                <a class="action-button shadow animate gray" onclick="namespace.openModal(event, 'edu');">edu</a>
               </div>
             </div>
           </div>
@@ -115,7 +115,7 @@
                 Perfect <br /> is the enemy of<br> good.
               </div>
               <div class="action">
-                <a class="action-button shadow animate green" onclick="namespace.openModal(event, 'work');">work</a>
+                <a class="action-button shadow animate gray" onclick="namespace.openModal(event, 'work');">work</a>
               </div>
             </div>
           </div>
