started implementing me page

--- a/app/index.html
+++ b/app/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/svg.css">
     <link rel="stylesheet" href="styles/skills.css">
+    <link rel="stylesheet" href="styles/me.css">
     <!-- endbuild -->
 
     <!-- build:js scripts/vendor/modernizr.js -->
