education, work and resume implemented

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,9 @@
     <link rel="stylesheet" href="styles/svg.css">
     <link rel="stylesheet" href="styles/skills.css">
     <link rel="stylesheet" href="styles/me.css">
+    <link rel="stylesheet" href="styles/edu.css">
+    <link rel="stylesheet" href="styles/work.css">
+    <link rel="stylesheet" href="styles/resume.css">
     <!-- endbuild -->
 
     <!-- build:js scripts/vendor/modernizr.js -->
@@ -52,7 +55,7 @@
           <!-- <div class="action">
             <a class="action-button shadow animate gray" style="text-align:center">resume</a>
           </div> -->
-          <a class="resume-btn">Resume</a>
+          <a class="resume-btn" onclick="namespace.openModal(event, 'resume');">Resume</a>
         </div>
       <!-- </div> -->
     </nav>
@@ -123,7 +126,7 @@
         </div>
       </div>
       <p style="text-align:center;">
-        before the main section finishes i want to write something like a quote
+        <!-- before the main section finishes i want to write something like a quote -->
       </p>
     </main>
 
@@ -216,9 +219,9 @@
             <div class="modal-body" id="modal-body">
               <p>Modal body</p>
             </div>
-            <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
+            <!-- <svg class="modal-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" preserveAspectRatio="none">
               <rect x="0" y="0" fill="none" width="226" height="162" rx="3" ry="3"></rect>
-            </svg>
+            </svg> -->
           </div>
         </div>
       </div>
