removing unused meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
-    <title>resume</title>
+    <title>Massimo Presta's resume</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <!-- Place favicon.ico in the root directory -->
@@ -64,7 +64,7 @@
         <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
-              <img src="images/ic_face_black_24dp_2x.png" alt="">
+              <img src="images/ic_face_black_24dp_2x.png" alt="About me">
             </div>
             <div class="back">
               <div class="description">
@@ -79,7 +79,7 @@
         <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
-              <img src="images/ic_code_black_24dp_2x.png" alt="">
+              <img src="images/ic_code_black_24dp_2x.png" alt="Coding skills">
             </div>
             <div class="back">
               <div class="description">
@@ -94,7 +94,7 @@
         <div class="flip-container box-unit" nope>
           <div class="flipper">
             <div class="front">
-              <img src="images/ic_school_black_24dp_2x.png" alt="">
+              <img src="images/ic_school_black_24dp_2x.png" alt="My education">
             </div>
             <div class="back">
               <div class="description">
@@ -111,7 +111,7 @@
           <div class="flipper">
             <div class="front">
               <span>
-                <img src="images/ic_work_black_24dp_2x.png" alt="">
+                <img src="images/ic_work_black_24dp_2x.png" alt="Work experience">
               </span>
             </div>
             <div class="back">
