--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,11 @@
 <!doctype html>
 <html class="no-js" lang="">
   <head>
+    <meta property='og:title' content="Massimo's resume"/>
+    <meta property='og:image' content='https://mexassi.github.io/images/front.png'/>
+    <meta property='og:description' content='Here is my resume'/>
+    <meta property='og:url' content='https://mexassi.github.io'/>
+
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, minimum-scale=1">
