updating year; refactoring font styling

--- a/app/index.html
+++ b/app/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="back">
               <div class="description">
-                Passionate full-stack developer, <br> curious philosopher.
+                Passionate <br>full-stack <br>developer.
               </div>
               <div class="action">
                 <a class="action-button shadow animate gray" onclick="namespace.openModal(event, 'me');">me</a>
@@ -247,7 +247,7 @@
       </div>
     </div>
     <div class="copyright">
-      &copy 2017 Massimo Presta
+      &copy 2019 Massimo Presta
     </div>
     </footer>
 
