updating font type

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <title>Massimo Presta's resume</title>
 
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
 
     <!-- build:css styles/vendor.css -->
